# ldenv-rs

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  cargo-build.yml
src/: main.rs
