[package]
name = "ldenv"
version = "0.2.0"
edition = "2021"
description = "program that load multiple env files based on mode and execute a command."
repository = "https://github.com/wighawag/ldenv"
homepage = "https://github.com/wighawag/ldenv#readme"
license = "MIT"
[dependencies]
dotenvy = "0.15.7"
clap = "3.2"

[[bin]]
name = "ldenv"